scope npm package to @amilajack

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-digraph",
+  "name": "@amilajack/react-digraph",
   "description": "directed graph react component",
   "version": "4.1.0",
   "keywords": [
